[gd_scene load_steps=7 format=2]

[ext_resource path="res://guis/options_menu/options_menu.tscn" type="PackedScene" id=1]
[ext_resource path="res://guis/ingame_gui/gui.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/montserrat_eb_big.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/gui/star.png" type="Texture" id=4]
[ext_resource path="res://guis/game_menu/game_menu.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/fonts/montserrat_eb_lives.tres" type="DynamicFont" id=7]

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="GameMenu" parent="." instance=ExtResource( 5 )]
pause_mode = 0
visible = false

[node name="OptionsMenu" parent="." instance=ExtResource( 1 )]
visible = false

[node name="TimeLeft" type="Label" parent="."]
margin_left = 40.0
margin_top = 20.0
margin_right = 600.0
margin_bottom = 47.0
size_flags_vertical = 2
custom_fonts/font = ExtResource( 3 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 620.0
margin_bottom = 340.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopRow" type="HBoxContainer" parent="Margin"]
margin_right = 600.0
size_flags_vertical = 0

[node name="Player1" type="HBoxContainer" parent="Margin/TopRow"]
margin_right = 596.0
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="Icon" type="TextureRect" parent="Margin/TopRow/Player1"]
visible = false
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Margin/TopRow/Player1"]
visible = false
margin_left = 4.0
margin_right = 596.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 7 )
text = "x 5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player2" type="HBoxContainer" parent="Margin/TopRow"]
margin_left = 600.0
margin_right = 600.0
size_flags_vertical = 0

[node name="Icon" type="TextureRect" parent="Margin/TopRow/Player2"]
visible = false
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Margin/TopRow/Player2"]
visible = false
margin_left = 4.0
margin_right = 34.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 7 )
text = "x 5"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomRow" type="HBoxContainer" parent="Margin"]
margin_top = 320.0
margin_right = 600.0
margin_bottom = 320.0
size_flags_vertical = 8
alignment = 2

[node name="Player3" type="HBoxContainer" parent="Margin/BottomRow"]
margin_right = 596.0
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="Icon" type="TextureRect" parent="Margin/BottomRow/Player3"]
visible = false
margin_bottom = 24.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Margin/BottomRow/Player3"]
visible = false
margin_right = 562.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 7 )
text = "x 5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player4" type="HBoxContainer" parent="Margin/BottomRow"]
margin_left = 600.0
margin_right = 600.0
size_flags_vertical = 0

[node name="Icon" type="TextureRect" parent="Margin/BottomRow/Player4"]
visible = false
margin_bottom = 24.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Margin/BottomRow/Player4"]
visible = false
margin_right = 30.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 7 )
text = "x 5"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="options_pressed" from="GameMenu" to="." method="_on_GameMenu_options_pressed"]
